Fixed a bug Image is cut off on the Thumbnail Message in mobile mode (#1395)
[fixes]: Fixed a bug reported by QA.

Fixes [CLNP-4448](https://sendbird.atlassian.net/browse/CLNP-4448)
Fixes [CLNP-7013](https://sendbird.atlassian.net/browse/CLNP-7013)
Fixes [CLNP-7012](https://sendbird.atlassian.net/browse/CLNP-7012)

### Changelogs
 - Fixed bugs where styles were broken in some components

### Summary
#### 원인
- Message Content를 가지고 있는 Container의 width/height가 Message Content의 내용에
따라 가변적으로 동작을 해아 하나,
     실질적으로 동작을 하지 않아서, OG Tag Image/Image이 기대 영역으로 표시 하지 못하고 있었음.
#### 수정
   - Container에서 가지고 있던 Width 값을 조정해서 보장된 영역에서 동작이 되도록 css 수정.

### Checklist

Put an `x` in the boxes that apply. You can also fill these out after
creating the PR. If unsure, ask the members.
This is a reminder of what we look for before merging your code.

- [x] **All tests pass locally with my changes**
- [ ] **I have added tests that prove my fix is effective or that my
feature works**
- [ ] **Public components / utils / props are appropriately exported**
- [ ] I have added necessary documentation (if appropriate)


## External Contributions

This project is not yet set up to accept pull requests from external
contributors.

If you have a pull request that you believe should be accepted, please
contact
the Developer Relations team <developer-advocates@sendbird.com> with
details
and we'll evaluate if we can set up a
[CLA](https://en.wikipedia.org/wiki/Contributor_License_Agreement) to
allow for the contribution.


[CLNP-4448]:
https://sendbird.atlassian.net/browse/CLNP-4448?atlOrigin=eyJpIjoiNWRkNTljNzYxNjVmNDY3MDlhMDU5Y2ZhYzA5YTRkZjUiLCJwIjoiZ2l0aHViLWNvbS1KU1cifQ
[CLNP-7013]:
https://sendbird.atlassian.net/browse/CLNP-7013?atlOrigin=eyJpIjoiNWRkNTljNzYxNjVmNDY3MDlhMDU5Y2ZhYzA5YTRkZjUiLCJwIjoiZ2l0aHViLWNvbS1KU1cifQ
[CLNP-7013]:
https://sendbird.atlassian.net/browse/CLNP-7013?atlOrigin=eyJpIjoiNWRkNTljNzYxNjVmNDY3MDlhMDU5Y2ZhYzA5YTRkZjUiLCJwIjoiZ2l0aHViLWNvbS1KU1cifQ

[CLNP-7012]:
https://sendbir

--- a/src/ui/MessageContent/index.scss
+++ b/src/ui/MessageContent/index.scss
@@ -17,7 +17,7 @@
   .sendbird-message-content__middle {
     max-width: 400px;
     @include mobile() {
-      max-width: calc(100vw - 140px);
+      width: calc(100vw - 140px);
     }
   }
 
@@ -211,7 +211,6 @@
 
     .sendbird-message-content__middle__body-container {
       position: relative;
-      width: 100%;
 
       .sendbird-message-content__middle__body-container__created-at {
         bottom: 2px;
@@ -288,6 +287,13 @@
 }
 .sendbird-message-content__middle__body-container:has(.sendbird-message-content__middle__message-item-body.reactions) {
   align-items: unset;
+}
+
+.sendbird-message-content__middle__body-container--thumbnail {
+  @include mobile() {
+    width: 100%;
+    align-items: stretch;
+  }
 }
 
 .sendbird-message-content-reactions {
